frame/support/test/tests/construct_runtime_ui/conflicting_module_name.stderr
error: Two modules with the same name!
  --> $DIR/conflicting_module_name.rs:10:3
   |
10 |         Balance: balances::{Module},
   |         ^^^^^^^

error: Two modules with the same name!
  --> $DIR/conflicting_module_name.rs:11:3
   |
11 |         Balance: balances::{Module},
   |         ^^^^^^^
